--- a/HGNN/analyse/Obtain misclassified and correctly classified images.ipynb
+++ b/HGNN/analyse/Obtain misclassified and correctly classified images.ipynb
@@ -47,9 +47,9 @@
     "experimentName=\"biology_paper_augmentation_effect\"\n",
     "trial_hash=\"825aa4c30a7ace1285f54f2f26af4f9702b5fec2a2f7edf3b35666f7\"\n",
     "\n",
-    "cuda=5\n",
+    "cuda=7\n",
     "\n",
-    "numOfRows=5"
+    "numOfRows=None"
    ]
   },
   {
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "using cuda 5\n"
+      "using cuda 7\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading images: 100%|██████████| 6522/6522 [00:26<00:00, 247.29it/s, fileName=/data/BGNN_data/INHS_cropped/images/INHS_FISH_63588_448.jpg]  \n"
+      "Loading images: 100%|██████████| 6522/6522 [00:26<00:00, 246.36it/s, fileName=/data/BGNN_data/INHS_cropped/images/INHS_FISH_63588_448.jpg]  \n"
      ]
     },
     {
@@ -121,7 +121,7 @@
     "print(experiment_params)\n",
     "\n",
     "config_parser = ConfigParser(experimentsPath, dataPath, experimentName)\n",
-    "datasetManager = dataLoader.datasetManager(experimentPathAndName, True)\n",
+    "datasetManager = dataLoader.datasetManager(experimentPathAndName, dataPath, True)\n",
     "datasetManager.updateParams(config_parser.fixPaths({**experiment_params,**{'augmented': False}}))\n",
     "dataset = datasetManager.getDataset()\n",
     "dataset.toggle_image_loading(augmentation=False, normalization=dataset.normalization_enabled) # Needed so we always get the same prediction accuracy \n",
@@ -177,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Transforming images: 100%|██████████| 6522/6522 [00:11<00:00, 591.75it/s]\n"
+      "Transforming images: 100%|██████████| 6522/6522 [00:11<00:00, 577.45it/s]\n"
      ]
     }
    ],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -393,16 +393,179 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08db52d7811f4355a78dc3a6bae0c149",
+       "model_id": "10068b00a8c549f9b9356297e57e327c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='figure', max=25.0, style=ProgressStyle(description_width=…"
+       "HBox(children=(FloatProgress(value=0.0, description='figure', max=155.0, style=ProgressStyle(description_width…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file name</th>\n",
+       "      <th>true label</th>\n",
+       "      <th>probability of true label</th>\n",
+       "      <th>predicted label</th>\n",
+       "      <th>probability of predicted label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>INHS_FISH_51790.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000484</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.984169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>INHS_FISH_41599.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.004159</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.858448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>INHS_FISH_86024.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.007538</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.942587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>INHS_FISH_55544.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.040605</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.786328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>INHS_FISH_4172.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.191964</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.540209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>INHS_FISH_16124.jpg</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.002724</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.899437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>INHS_FISH_85582.jpg</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.099280</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.564271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>INHS_FISH_92608.jpg</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.104537</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.561070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>INHS_FISH_25130.jpg</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.306219</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.428838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>INHS_FISH_62393.jpg</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.070814</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.259031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>89 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              file name true label  probability of true label predicted label  \\\n",
+       "24  INHS_FISH_51790.jpg          0                   0.000484              33   \n",
+       "67  INHS_FISH_41599.jpg          0                   0.004159              33   \n",
+       "17  INHS_FISH_86024.jpg          0                   0.007538              33   \n",
+       "83  INHS_FISH_55544.jpg          0                   0.040605              33   \n",
+       "69   INHS_FISH_4172.jpg          0                   0.191964              33   \n",
+       "..                  ...        ...                        ...             ...   \n",
+       "8   INHS_FISH_16124.jpg         33                   0.002724               0   \n",
+       "13  INHS_FISH_85582.jpg         33                   0.099280               0   \n",
+       "6   INHS_FISH_92608.jpg         33                   0.104537               0   \n",
+       "78  INHS_FISH_25130.jpg         33                   0.306219               0   \n",
+       "50  INHS_FISH_62393.jpg         34                   0.070814              28   \n",
+       "\n",
+       "    probability of predicted label  \n",
+       "24                        0.984169  \n",
+       "67                        0.858448  \n",
+       "17                        0.942587  \n",
+       "83                        0.786328  \n",
+       "69                        0.540209  \n",
+       "..                             ...  \n",
+       "8                         0.899437  \n",
+       "13                        0.564271  \n",
+       "6                         0.561070  \n",
+       "78                        0.428838  \n",
+       "50                        0.259031  \n",
+       "\n",
+       "[89 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -420,9 +583,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file /home/elhamod/HGNN/experiments/biology_paper_augmentation_effect/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79/trainingIndex.csv read\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "403dd0e477334d3b83d40548a303e86c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='figure', max=190.0, style=ProgressStyle(description_width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file name</th>\n",
+       "      <th>true label</th>\n",
+       "      <th>probability of true label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1067</th>\n",
+       "      <td>INHS_FISH_41181.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.389659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>565</th>\n",
+       "      <td>INHS_FISH_25715.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.565110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>INHS_FISH_84473.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.578712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>633</th>\n",
+       "      <td>INHS_FISH_9758.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.634390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>INHS_FISH_25694.jpg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.846018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>INHS_FISH_65534.jpg</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.984275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803</th>\n",
+       "      <td>INHS_FISH_81262.jpg</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.986948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>INHS_FISH_37323.jpg</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.986988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>INHS_FISH_40590.jpg</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.988063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>INHS_FISH_93023.jpg</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.988111</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1216 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                file name true label  probability of true label\n",
+       "1067  INHS_FISH_41181.jpg          0                   0.389659\n",
+       "565   INHS_FISH_25715.jpg          0                   0.565110\n",
+       "432   INHS_FISH_84473.jpg          0                   0.578712\n",
+       "633    INHS_FISH_9758.jpg          0                   0.634390\n",
+       "797   INHS_FISH_25694.jpg          0                   0.846018\n",
+       "...                   ...        ...                        ...\n",
+       "760   INHS_FISH_65534.jpg         37                   0.984275\n",
+       "803   INHS_FISH_81262.jpg         37                   0.986948\n",
+       "25    INHS_FISH_37323.jpg         37                   0.986988\n",
+       "84    INHS_FISH_40590.jpg         37                   0.988063\n",
+       "476   INHS_FISH_93023.jpg         37                   0.988111\n",
+       "\n",
+       "[1216 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_correctlyclassified.to_csv(os.path.join(experimentPathAndName, modelName, 'correctly classified examples.csv'))\n",
     "plot_top_n(df_correctlyclassified, \"correctly classified\", numOfRows=numOfRows, show_same_class=False)\n",
