--- a/HGNN/train/Fix parameters.ipynb
+++ b/HGNN/train/Fix parameters.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
     "dataPath=\"/data/BGNN_data\"\n",
-    "experimentName=\"Testing_layer_cases_TwoNets\"\n",
+    "experimentName=\"biology_paper_dataset_differentModels\"\n",
     "\n",
     "cuda=6"
    ]
@@ -59,7 +59,7 @@
     "\n",
     "# Keep same order as ConfigParserWriter!\n",
     "changes = {\n",
-    "    \"aug_profile\": \"withRotation_PCA1.5\"\n",
+    "    'numOfTrials': 3\n",
     "}"
    ]
   },
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40bfeeeccdef4843b4cf941f59d61412",
+       "model_id": "dcf1d1bb26cf454f812ff8fd3bdc9e75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,14 +122,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "datasplit /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a/params.json updated\n",
-      "datasplit /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a/params.json updated\n",
-      "datasplit /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a/params.json updated\n",
-      "datasplit /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/datasplits/8abeaa923bd09bce60acac49f8d867e75f3c57d47370f417140df18a/params.json updated\n",
+      "datasplit /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79/params.json updated\n",
+      "datasplit /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79/params.json updated\n",
+      "datasplit /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79/params.json updated\n",
+      "datasplit /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79 updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/datasplits/b4896471167c5599680115e51349929def797e403bead8f0fe554d79/params.json updated\n",
       "\n"
      ]
     }
@@ -191,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26dd151f82f14844a3c6a8557ed2130e",
+       "model_id": "05031756dac747a89a3c06f25d777e2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,12 +205,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ce265a138934ce9ac7103f6848fb6fe",
+       "model_id": "ddd3dc24fd0a425790c8856dbeb8c66f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -220,20 +220,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/8d2e4649ff9d50a6ab53dcbab9cf799e82237cb3186969410ec2f762 -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/27398c7fd0bc2232f63885417855711b5a5cff5718b4f7f699950cfd updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/27398c7fd0bc2232f63885417855711b5a5cff5718b4f7f699950cfd/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/907fb6a09efd800575291e3ec0a59c6773c600417bf1dee04b571b9f -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/825aa4c30a7ace1285f54f2f26af4f9702b5fec2a2f7edf3b35666f7 updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/825aa4c30a7ace1285f54f2f26af4f9702b5fec2a2f7edf3b35666f7/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/c848e37ed5229c2d3e651dbb81b74cda5b4806aaccb2da9587216119 -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/8f4c827179c7284f264c3da790cbe741cb17f91416b995aafedd7720 updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/8f4c827179c7284f264c3da790cbe741cb17f91416b995aafedd7720/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/8bc778169c754715001221b39327c06d40333454eeebb19bb166881d -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/a4dba7925ad2409f8467537935803f353cdecd311cbfba8267c00bbd updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/a4dba7925ad2409f8467537935803f353cdecd311cbfba8267c00bbd/params.json updated\n",
+      "model /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/03df9a8fb1b941dc6f72724fc1f7c4c63578299545318b5e4ac140c9 -> /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/cf6bac15d722c0388d66cc410fefb0a7cca3cc2ddd710d482b4f04e8 updated\n",
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/models/cf6bac15d722c0388d66cc410fefb0a7cca3cc2ddd710d482b4f04e8/params.json updated\n",
+      "model models/f1faed1c4bfcaa6f1aa8bfa4d35e231702b35a0086f407f2cbc89758 could not be fixed to models/37c14f694767fdbdfc1fe7ae1941cf5179bc1d3fddac11361336d937\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5545c03c63e54d8db97035a085fe3375",
+       "model_id": "30187055a19d451e9422418571c83892",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -243,20 +250,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/7df7d1761492fab3535cf32c4335fd438877d21b34a5b4fb7d10ea1d -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/0f1d9868bbb1924250f2e1895688c41e6fd6106101ed858026048f0f updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/0f1d9868bbb1924250f2e1895688c41e6fd6106101ed858026048f0f/params.json updated\n",
+      "model models/d014becdcaaa06e69d07ed7cd289b89f475c1bece84b45c5992ab320 could not be fixed to models/1f473114ca43b4ceb1a2ecb70ead11478584241e97458fc74d6694e0\n",
+      "model models/de1ad45a560caea97ae654abf0e8c4b49677e45eeb38eea6b3951c67 could not be fixed to models/a17fa195789d6a3dd1c963087bd980c9ff352075349b8427af918b73\n",
+      "model models/d2807d5aba0574f8fd644f199693a91f6ac76d6962a806c2b1dd5509 could not be fixed to models/3645aac312be7c37e7efa6c147262f308eeafd88d1361603f04bb34e\n",
+      "model models/e43c45998663847ceedc406a8f7bbececb54deb3fda4146035b9c83e could not be fixed to models/0764ecca7cb57827cb9b7d129721b4cdc4d8caaa352282268c4b6282\n",
+      "model models/c4f7c78d6666d8b7c62b580ea05e9a23b2ad9698212724dd5cc967f4 could not be fixed to models/c16fada3ecd65b6dc496f00c77a06db9c738a372cd4206bc0af21cd5\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7340f0e34db2458abf53ff7830145a15",
+       "model_id": "3a6e8f5c1d1e487d99407ef0740e179b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -266,20 +276,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/47ba45e62605b18418cae49e2cd88bce710d67a09f7f0de24a44e02f -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/6bc7a3a3fa6a4c4ecdcc3a1ef7e26a2dd724db453e2fc55b578d82df updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/6bc7a3a3fa6a4c4ecdcc3a1ef7e26a2dd724db453e2fc55b578d82df/params.json updated\n",
+      "model models/03b2491251697b0ddf9cbc33efed513e7650235554adc1e942d52767 could not be fixed to models/6d98bcb1f2bda1058dd8c8bc28366920235a96a2c62a152e317e19a0\n",
+      "model models/1497b1db20d84585f556077f836d8201e3d9ef650cc698384d6a8c1d could not be fixed to models/975c676dc16f1dbb79009478a3855f9a2d36216c347d8f7b8bfe7549\n",
+      "model models/f43b5dfdc59f20edc17ba7559c98b308e5d6368ba55eb28bf879d3cf could not be fixed to models/09337aa6e614a87569e4e0ad7041c8b1da8eab80732b5f6b5d1ed3e2\n",
+      "model models/3ee66bf3b986d94be69a5a88b6ba1ab551ccb1f4c3515061aa0fe525 could not be fixed to models/c3fe09a1d5e4aca5e33f466ccb1b4e8d764a93510d70e5499d231562\n",
+      "model models/2f74b54d3df48c2c4505e5b9410e09ce14c618f7e6a4b6f45930831e could not be fixed to models/c46de6793e59be53423dbffa3e166afa09729cdfc40dcf16867714c8\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fd1cf64b62f42f18478c2774bb2a302",
+       "model_id": "c1bc59cd16a746bfb0661535cfc868a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -289,8 +302,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/b801207da7faf4715e979d24a7c2be622657ec5477c50b639f508fb6 -> /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/31510c5322e87075e6e794bae5ad3b46ba71dda99e7e7ef87b309b71 updated\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/models/31510c5322e87075e6e794bae5ad3b46ba71dda99e7e7ef87b309b71/params.json updated\n",
+      "model models/e9274f43a9c6d1edb6425c12b87f17dae4aa9eff6fa5f61f0ed145aa could not be fixed to models/5735cea1d437d01b5ae9ab36263859720f3fcde6f1d7e1299bc1f470\n",
+      "model models/68d2b9d166dfdc7ee01b4541f597c8b3e78aa0c9f116134c6d803754 could not be fixed to models/d7ef4d63e71973c6aad10eaf7fd32c1c88ad2e96a6f89471bf46e4c2\n",
+      "model models/79768b7a8f25e4ffaaa337d292c05522c445d2a37b59f12a46831425 could not be fixed to models/080895e702964b84b97c64d4429dc024850eb9541f2afbe1d5452768\n",
+      "model models/e35ef96c9aa5cacd0e2618271dd54d3ed1be22e5d3267466f44b23d9 could not be fixed to models/60e192dc562e5736f8640c0ba0cf3ed756ebe9c71c730d74adf91816\n",
+      "model models/917779be400e44d87826660e83562b2e7d76373f2fb6edb649dad309 could not be fixed to models/e6926a93a4f6a79f86493711245bb49512c2c28142d9264ec9fcafd2\n",
       "\n",
       "\n"
      ]
@@ -355,7 +371,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65c1ae466bd54c8cbe4019f0ff5ff1a7",
+       "model_id": "827bd79ceb7544d4a4c3bf72d4a27921",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,10 +386,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result 6f4c6ea6c93f6d0d1a1554cf9d4a1cdbc8ee29e6b120944ce5dc881f could not be fixed to 125ee08dfe6ba23fed5fb8941847bda019ea9828c2e6abeabb6d83ba\n",
-      "result 8a3b8b399c79da7ffb25aba02fc0b48f92ff52eb763e78dc632c654c could not be fixed to 7be342dc25f14a31a356c193e1f24c20e8e0311ab8175ee2eca5de27\n",
-      "result 3c36562a081550a97b4fdc9deeb8760157909672d842f600fa003ac5 could not be fixed to 020252a5c8a2ac261348f2cdef09e1b0f115638ce65cd98222056b90\n",
-      "result 10c137a24ea9c7cea5f3b5b82ce17fc354a7e77fbb90943a8ac12550 could not be fixed to a4d863db4d407868fd104061f534dae975774280842a71e1c02daee3\n",
+      "result dc9cdf5d84792686be05ad04199b4691281d7c64533198ad5baa2e78 could not be fixed to 091351b87556c0d52115d41316e73819c38ea32f4790877f20fc5137\n",
+      "result 47e062f28bdd7dc8768626a462508fca6f4a73b1693594d1c5b5d708 could not be fixed to a8fbd8e6a0b45aae4ef6c68ed38dee2c5d46dbafa26e0eb569d43930\n",
+      "result 39e82b1034de354855512342447991ea092e1c4a3bb9ba59613939c5 could not be fixed to 8c4db863b698c3d66823184d97b42eb99dd4b88b109c56df04fa7ff5\n",
+      "result 109e15bd14b51286e5dcf8dd2630b2fba01de4f027517c124454a24f could not be fixed to ba1048373df76e378c958f977a494db049271e4b70421db38c5d99d7\n",
       "\n"
      ]
     }
@@ -429,7 +445,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23ae1309e87a462fbb9dbddaaf94fa75",
+       "model_id": "852178f6e1004c489bde33db44ba281b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -443,12 +459,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4617af1216bc479ebc37d059f0f18d57",
+       "model_id": "a2b82ef387c249f5adbfa347118178d3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -458,7 +474,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trialHash 8d2e4649ff9d50a6ab53dcbab9cf799e82237cb3186969410ec2f762 -> 27398c7fd0bc2232f63885417855711b5a5cff5718b4f7f699950cfd updated\n",
+      "trialHash 907fb6a09efd800575291e3ec0a59c6773c600417bf1dee04b571b9f -> 825aa4c30a7ace1285f54f2f26af4f9702b5fec2a2f7edf3b35666f7 updated\n",
+      "trialHash c848e37ed5229c2d3e651dbb81b74cda5b4806aaccb2da9587216119 -> 8f4c827179c7284f264c3da790cbe741cb17f91416b995aafedd7720 updated\n",
+      "trialHash 8bc778169c754715001221b39327c06d40333454eeebb19bb166881d -> a4dba7925ad2409f8467537935803f353cdecd311cbfba8267c00bbd updated\n",
       "\n"
      ]
     },
@@ -474,12 +492,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c584fad81174fb9b512ef28c501e3a1",
+       "model_id": "51d229760a604ad096a356faf6ae7d0a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -495,12 +513,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d70a48f17592437c895cb8e06f455de9",
+       "model_id": "cc2b3d72f63c413aa725b6366d4e1c3f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -516,12 +534,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f17784d418fa42cf99422eeafe28dd32",
+       "model_id": "9f093c5d2f534b5782307f491fd435d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=1.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -605,7 +623,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a97d2cb65494f259ac904c08b6efd48",
+       "model_id": "9e3b68c86c2046959a394c735447de39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -621,7 +639,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "json /home/elhamod/HGNN/experiments/Testing_layer_cases_TwoNets/params.json updated\n"
+      "json /home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/params.json updated\n"
      ]
     }
    ],
